# OBTool

./: .gitmodules  CMakeLists.txt
cmake_modules/: FindFbxSdk.cmake
src/: afs.c  afs.h  build_afs.cpp  build_momo.cpp  build_scenario_afs.cpp  commands.c  commands.h  convert_to_fbx.cpp  convert_to_nbd.cpp  extract_afs.cpp  extract_momo.cpp  extract_scenario_afs.cpp  fbx.h  imageindexing.cpp  main.cpp  patch_nbd_textures.cpp  tim2.c  tim2.h  tim2utils.c  tim2utils.h  tristrip.cpp  tristrip.h
src/striper/: Adjacency.cpp  StdAfx.h  Striper.cpp
